added footer and description and updated title

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <style>
+    .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      color: white;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -42,6 +51,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <footer class=" text-muted text-center text-small footer mt-auto py-3">
+    <p class="mb-1">&copy; 2020 - Developed by Amit Ghosh</p>
+    <ul class="list-inline">
+
+    </ul>
+  </footer>
+
 </body>
 
 </html>
