fixed footer position issue

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <title>Bargain - Price Tracker</title>
   <style>
     .footer {
-      position: fixed;
+      position: relative;
       bottom: 0;
       width: 100%;
       color: white;
